--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    이승균의 홈페이지
+    <ol>
+        <li><a href="/suika/index.html">1번째프로젝트</a></li>
+        <li><a href="">2번째프로젝트</a></li>
+        <li><a href="">3번째프로젝트</a></li>
+        <li><a href="">4번째프로젝트</a></li>
+        <li><a href="">5번째프로젝트</a></li>
+    </ol>
 </body>
 </html>
